<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_car_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:hint="@string/car_name"
        android:inputType="text"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/et_co_owners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_car_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:hint="@string/car_co_owners"
        android:inputType="text"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tv_comma_separated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_co_owners"
        android:layout_below="@+id/et_co_owners"
        android:text="@string/comma_separated"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
